--- a/src/main/resources/assets/rainboworemod/lang/en_us.lang
+++ b/src/main/resources/assets/rainboworemod/lang/en_us.lang
@@ -4,5 +4,6 @@ language.region=United States
 language.code=en_us
 
 tile.rainboworemod.rainbow_ore.name=Rainbow Ore
+tile.rainboworemod.rainbow_block.name=Rainbow Block
 item.rainboworemod.rainbow_ingot.name=Rainbow Ingot
 item.rainboworemod.rainbow_sword.name=Rainbow Sword
