--- a/src/main/resources/assets/rainboworemod/lang/en_us.lang
+++ b/src/main/resources/assets/rainboworemod/lang/en_us.lang
@@ -7,4 +7,5 @@ tile.rainboworemod.rainbow_ore.name=Rainbow Ore
 tile.rainboworemod.rainbow_block.name=Rainbow Block
 item.rainboworemod.rainbow_ingot.name=Rainbow Ingot
 item.rainboworemod.rainbow_sword.name=Rainbow Sword
+item.rainboworemod.rainbow_shovel.name=Rainbow Shovel
 item.rainboworemod.rainbow_axe.name=Rainbow Axe
