--- a/src/main/resources/assets/rainboworemod/lang/en_us.lang
+++ b/src/main/resources/assets/rainboworemod/lang/en_us.lang
@@ -8,4 +8,5 @@ tile.rainboworemod.rainbow_block.name=Rainbow Block
 item.rainboworemod.rainbow_ingot.name=Rainbow Ingot
 item.rainboworemod.rainbow_sword.name=Rainbow Sword
 item.rainboworemod.rainbow_shovel.name=Rainbow Shovel
+item.rainboworemod.rainbow_hoe.name=Rainbow Hoe
 item.rainboworemod.rainbow_axe.name=Rainbow Axe
