add pickaxe item

--- a/src/main/resources/assets/rainboworemod/lang/en_us.lang
+++ b/src/main/resources/assets/rainboworemod/lang/en_us.lang
@@ -9,4 +9,5 @@ item.rainboworemod.rainbow_ingot.name=Rainbow Ingot
 item.rainboworemod.rainbow_sword.name=Rainbow Sword
 item.rainboworemod.rainbow_shovel.name=Rainbow Shovel
 item.rainboworemod.rainbow_hoe.name=Rainbow Hoe
+item.rainboworemod.rainbow_pickaxe.name=Rainbow Pickaxe
 item.rainboworemod.rainbow_axe.name=Rainbow Axe
