Add rainbow armor

--- a/src/main/resources/assets/rainboworemod/lang/en_us.lang
+++ b/src/main/resources/assets/rainboworemod/lang/en_us.lang
@@ -11,3 +11,7 @@ item.rainboworemod.rainbow_shovel.name=Rainbow Shovel
 item.rainboworemod.rainbow_hoe.name=Rainbow Hoe
 item.rainboworemod.rainbow_pickaxe.name=Rainbow Pickaxe
 item.rainboworemod.rainbow_axe.name=Rainbow Axe
+item.rainboworemod.rainbow_helmet.name=Rainbow Helmet
+item.rainboworemod.rainbow_chestplate.name=Rainbow Chestplate
+item.rainboworemod.rainbow_leggings.name=Rainbow Leggings
+item.rainboworemod.rainbow_boots.name=Rainbow Boots
